// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`popper transforms correctly 1`] = `
"import { Popper } from '@vkontakte/vkui';
import React from 'react';

const App = () => {
  return (
    <React.Fragment>
      <Popper offsetByMainAxis={0}>content</Popper>
      <Popper offsetByCrossAxis={0}>content</Popper>
      <Popper arrowProps={{
        iconClassName: "arrow"
      }}>content</Popper>
      <Popper usePortal>content</Popper>
      <Popper usePortal={document.getElementById('root')}>content</Popper>
      <Popper usePortal={document.getElementById('root')}>content</Popper>
      <Popper children={() => <div>content</div>} />
    </React.Fragment>
  );
};"
`;

exports[`popper transforms correctly 2`] = `
"import { Popper as VKUIPopper } from '@vkontakte/vkui';
import React from 'react';

const App = () => {
  return (
    <React.Fragment>
      <VKUIPopper>content</VKUIPopper>
    </React.Fragment>
  );
};"
`;
